# ai-mcp-pic-obj-detection

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
mcp_server/: client.py
memory/: long.py  short.py
models/: bedrock_model.py
prompts/: prompt.py
